--- a/src/python_interface/CMakeLists.txt
+++ b/src/python_interface/CMakeLists.txt
@@ -1,5 +1,40 @@
-find_package(BLAS REQUIRED)
-
+list(APPEND f90_flags
+    "$<$<COMPILE_LANG_AND_ID:Fortran,GNU>:-O3>"
+    "$<$<COMPILE_LANG_AND_ID:Fortran,GNU>:-cpp>"
+    "$<$<COMPILE_LANG_AND_ID:Fortran,GNU>:-std=f2008>"
+    "$<$<COMPILE_LANG_AND_ID:Fortran,GNU>:-fimplicit-none>"
+    "$<$<COMPILE_LANG_AND_ID:Fortran,GNU>:-fall-intrinsics>"
+    "$<$<CONFIG:Debug>:$<$<COMPILE_LANG_AND_ID:Fortran,GNU>:-Wuninitialized>>"
+    "$<$<CONFIG:Debug>:$<$<COMPILE_LANG_AND_ID:Fortran,GNU>:-fbounds-check>>"
+    "$<$<CONFIG:Debug>:$<$<COMPILE_LANG_AND_ID:Fortran,GNU>:-Wunused>>"
+    "$<$<CONFIG:Debug>:$<$<COMPILE_LANG_AND_ID:Fortran,GNU>:-fbacktrace>>"
+    "$<$<CONFIG:Debug>:$<$<COMPILE_LANG_AND_ID:Fortran,GNU>:-fcheck=array-temps,bounds,do,mem,pointer>>"
+    "$<$<COMPILE_LANG_AND_ID:Fortran,NVHPC>:-fast>"
+    "$<$<COMPILE_LANG_AND_ID:Fortran,NVHPC>:-cpp>"
+    "$<$<COMPILE_LANG_AND_ID:Fortran,NVHPC>:-Mnobackslash>"
+    "$<$<CONFIG:Debug>:$<$<COMPILE_LANG_AND_ID:Fortran,NVHPC>:-C>>"
+    "$<$<CONFIG:Debug>:$<$<COMPILE_LANG_AND_ID:Fortran,NVHPC>:-g>>"
+    "$<$<CONFIG:Debug>:$<$<COMPILE_LANG_AND_ID:Fortran,NVHPC>:-traceback>>"
+    "$<$<CONFIG:Debug>:$<$<COMPILE_LANG_AND_ID:Fortran,NVHPC>:-Wall>>"
+    "$<$<CONFIG:Debug>:$<$<COMPILE_LANG_AND_ID:Fortran,NVHPC>:-Mchkptr>>"
+    "$<$<CONFIG:Debug>:$<$<COMPILE_LANG_AND_ID:Fortran,NVHPC>:-Mchkstk>>"
+)
+if(UNIX)
+  list(APPEND f90_flags
+    "$<$<COMPILE_LANG_AND_ID:Fortran,IntelLLVM>:-fast>"
+    "$<$<COMPILE_LANG_AND_ID:Fortran,IntelLLVM>:-free>"
+    "$<$<COMPILE_LANG_AND_ID:Fortran,IntelLLVM>:-fpp>"
+    "$<$<CONFIG:Debug>:$<$<COMPILE_LANG_AND_ID:Fortran,IntelLLVM>:-g>>"
+    "$<$<CONFIG:Debug>:$<$<COMPILE_LANG_AND_ID:Fortran,IntelLLVM>:-traceback>>"
+    "$<$<CONFIG:Debug>:$<$<COMPILE_LANG_AND_ID:Fortran,IntelLLVM>:-debug>>"
+    "$<$<COMPILE_LANG_AND_ID:Fortran,Intel>:-fast>"
+    "$<$<COMPILE_LANG_AND_ID:Fortran,Intel>:-free>"
+    "$<$<COMPILE_LANG_AND_ID:Fortran,Intel>:-fpp>"
+    "$<$<CONFIG:Debug>:$<$<COMPILE_LANG_AND_ID:Fortran,Intel>:-g>>"
+    "$<$<CONFIG:Debug>:$<$<COMPILE_LANG_AND_ID:Fortran,Intel>:-traceback>>"
+    "$<$<CONFIG:Debug>:$<$<COMPILE_LANG_AND_ID:Fortran,Intel>:-debug>>"
+  )
+endif()
 if(SKBUILD)
   find_package(F2PY REQUIRED)
   find_package(Python 3.8 REQUIRED COMPONENTS NumPy)
@@ -52,25 +87,15 @@ if(SKBUILD)
       $<$<CONFIG:Debug>:--debug-capi>
       --f2cmap ${f2cmap}
       "${CMAKE_CURRENT_SOURCE_DIR}/python_driver.f90"
-      "${CMAKE_CURRENT_BINARY_DIR}/../mobbrmsd/mobbrmsd/libmobbrmsd.a"
-      -I${CMAKE_CURRENT_BINARY_DIR}/../mobbrmsd/mobbrmsd/mod_files
+      "${CMAKE_CURRENT_BINARY_DIR}/../mobbrmsd/mobbrmsd/libmobbrmsd_gddp.a"
+      -I${CMAKE_CURRENT_BINARY_DIR}/../mobbrmsd/mobbrmsd_gd/mobbrmsd_gddp/mod_files
       ${BLAS_LIBRARIES}
       ${lomp}
       --opt=-O3
       --f90flags='
       "${BLAS_LINKER_FLAGS}"
       "${OpenMP_Fortran_FLAGS}"
-      $<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","GNU">:"-O3">
-      $<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","GNU">:"-cpp">
-      $<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","GNU">:"-std=f2008">
-      $<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","GNU">:"-fimplicit-none">
-      $<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","GNU">:"-fall-intrinsics">
-      $<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","Intel">:"-O3">
-      $<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","Intel">:"-fpp">
-      $<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","Intel">:"-stand">
-      $<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","Intel">:"f08">
-      $<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","Intel">:"-free">
-      $<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","Intel">:"-implicitnone">
+      "${f90_flags}"
       '
       $<$<CONFIG:Debug>:--debug>
     DEPENDS mobbrmsd
@@ -87,24 +112,14 @@ if(SKBUILD)
       $<$<CONFIG:Debug>:--debug-capi>
       --f2cmap ${f2cmap}
       "${CMAKE_CURRENT_SOURCE_DIR}/python_driver.f90"
-      "${CMAKE_CURRENT_BINARY_DIR}/../mobbrmsd/mobbrmsd_2d/libmobbrmsd_2d.a"
-      -I${CMAKE_CURRENT_BINARY_DIR}/../mobbrmsd/mobbrmsd_2d/mod_files
+      "${CMAKE_CURRENT_BINARY_DIR}/../mobbrmsd/mobbrmsd_2d/libmobbrmsd_2ddp.a"
+      -I${CMAKE_CURRENT_BINARY_DIR}/../mobbrmsd/mobbrmsd_2d/mobbrmsd_2ddp/mod_files
       ${lomp}
       --opt=-O3
       --f90flags='
       "${BLAS_LINKER_FLAGS}"
       "${OpenMP_Fortran_FLAGS}"
-      $<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","GNU">:"-O3">
-      $<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","GNU">:"-cpp">
-      $<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","GNU">:"-std=f2008">
-      $<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","GNU">:"-fimplicit-none">
-      $<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","GNU">:"-fall-intrinsics">
-      $<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","Intel">:"-O3">
-      $<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","Intel">:"-fpp">
-      $<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","Intel">:"-stand">
-      $<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","Intel">:"f08">
-      $<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","Intel">:"-free">
-      $<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","Intel">:"-implicitnone">
+      "${f90_flags}"
       '
       $<$<CONFIG:Debug>:--debug>
     DEPENDS mobbrmsd_2d
@@ -121,24 +136,14 @@ if(SKBUILD)
       $<$<CONFIG:Debug>:--debug-capi>
       --f2cmap ${f2cmap}
       "${CMAKE_CURRENT_SOURCE_DIR}/python_driver.f90"
-      "${CMAKE_CURRENT_BINARY_DIR}/../mobbrmsd/mobbrmsd_3d/libmobbrmsd_3d.a"
-      -I${CMAKE_CURRENT_BINARY_DIR}/../mobbrmsd/mobbrmsd_3d/mod_files
+      "${CMAKE_CURRENT_BINARY_DIR}/../mobbrmsd/mobbrmsd_3d/libmobbrmsd_3ddp.a"
+      -I${CMAKE_CURRENT_BINARY_DIR}/../mobbrmsd/mobbrmsd_3d/mobbrmsd_3ddp/mod_files
       ${lomp}
       --opt=-O3
       --f90flags='
       "${BLAS_LINKER_FLAGS}"
       "${OpenMP_Fortran_FLAGS}"
-      $<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","GNU">:"-O3">
-      $<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","GNU">:"-cpp">
-      $<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","GNU">:"-std=f2008">
-      $<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","GNU">:"-fimplicit-none">
-      $<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","GNU">:"-fall-intrinsics">
-      $<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","Intel">:"-O3">
-      $<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","Intel">:"-fpp">
-      $<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","Intel">:"-stand">
-      $<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","Intel">:"f08">
-      $<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","Intel">:"-free">
-      $<$<STREQUAL:"${CMAKE_Fortran_COMPILER_ID}","Intel">:"-implicitnone">
+      "${f90_flags}"
       '
       $<$<CONFIG:Debug>:--debug>
     DEPENDS mobbrmsd_3d
@@ -172,11 +177,12 @@ if( CMAKE_BUILD_TYPE MATCHES "Debug" )
   add_executable(test_driver)
   target_sources(test_driver PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/python_driver.f90
                                      ${CMAKE_CURRENT_SOURCE_DIR}/test_driver.f90)
-  target_include_directories(test_driver PRIVATE ${CMAKE_CURRENT_BINARY_DIR}/../mobbrmsd/mobbrmsd_3d/mod_files)
+  target_include_directories(test_driver PRIVATE ${CMAKE_CURRENT_BINARY_DIR}/../mobbrmsd/mobbrmsd_3d/mobbrmsd_3ddp/mod_files)
   target_include_directories(test_driver PRIVATE ${OpenMP_Fortran_INCLUDE_DIRS} )
+  target_include_directories(test_driver PRIVATE ${unittest_INCLUDE_DIRS})
   target_link_libraries(test_driver PRIVATE blas )
   target_link_libraries(test_driver PRIVATE ${OpenMP_Fortran_LIB_NAMES} )
-  target_link_libraries(test_driver PRIVATE mobbrmsd_3d_shared)
+  target_link_libraries(test_driver PRIVATE mobbrmsd_3ddp_shared)
   target_link_libraries(test_driver PRIVATE unittest)
   add_test( NAME test_driver COMMAND test_driver )
 endif()
